--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -1,7 +1,7 @@
-/* This is an example of using Sass, otherwise plain CSS works too*/
-$primary-background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
-;
-
-body {
-  background: $primary-background;
-}
+@import 'variables';
+@import 'reset';
+@import 'typography';
+@import 'animations';
+@import 'search_bar';
+@import 'main_page';
+@import 'login_page'
