--- a/src/css/_main_page.scss
+++ b/src/css/_main_page.scss
@@ -1,5 +1,18 @@
-.header-main {
+.header {
+  position: relative;
   width: 100%;
-  height: 80vh;
-  border: $test-border;
+  height: 100vh;
+  // border: $test-border;
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.671), rgba(255, 255, 255, 0.267)), url('../images/overlook-hotel.jpg');
+  background-size: cover;
+  background-position:bottom;
+  clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+
+  &__title {
+    position: absolute;
+    text-align:center;
+    top:45%;
+    left:50%;
+    transform: translate(-50%, -50%);
+  }
 }
