Add styling to search bar

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -1,6 +1,7 @@
 @import 'variables';
 @import 'reset';
 @import 'typography';
+@import 'mixins';
 @import 'animations';
 @import 'search_bar';
 @import 'main_page';
