--- a/src/css/_search_bar.scss
+++ b/src/css/_search_bar.scss
@@ -15,30 +15,60 @@
 
 
   &__input{
+    position: relative;
     padding-left: 3rem;
     width: 100%;
-    height: 200%;
+    height: 100%;
     border-radius: 100px;
     border: none;
-    transform: translate(0, -25%);
-    
+    // transform: translate(0, -25%);
     &:hover,
     &:focus {
       // box-shadow: 0 0 0 6px rgb(255, 255, 255);
-      background-color: rgba(148, 148, 148, 0.507);
+      background-color: rgba(194, 194, 194, 0.507);
       outline: none;
     }
-  }
 
-  
+    &__header {
+      position: absolute;
+      height: 100%;
+      top: 20%;
+      line-height: 2 ;
+      // transform: translate(0, -50%);
+      &--main {
+        display: block;
+      }
+
+      &--sub{
+        display: block;
+        font-weight: 200;
+        color: $subtle-tones;
+      }
+    }
+  }
 }
 
+.drop-down-menu {
+  padding: 3rem;
+  margin-left: -3rem;
+  font-size: 1.4rem;
+  line-height: 3;
+  position: fixed;
+  top: 9rem;
+  background-color: white;
+  height: 25rem;
+  width:24%;
+  border-radius: 2rem;
+  box-shadow: 0 1rem 2rem (rgba(0, 0, 0, 0.2));
+}
+
+
 label{
-  width:25%;
+  width:0%;
   height: 50%;
   
   &:not(:last-child) {
-    border-right: 1px solid rgb(173, 173, 173);
+    // border-right: 1px solid rgb(173, 173, 173);
   }
   &:hover{
     // border:none
