--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -4,5 +4,6 @@
 @import 'mixins';
 @import 'animations';
 @import 'search_bar';
+@import 'booking_card';
 @import 'main_page';
 @import 'login_page'
