--- a/src/css/_mixins.scss
+++ b/src/css/_mixins.scss
@@ -4,3 +4,10 @@
   flex: 1;
   align-items: center;
 }
+
+@mixin center ($top, $left) {
+  position: absolute;
+  top: $top;
+  left: $left;
+  transform: translate(-50%, -50%);
+}
