--- a/src/css/_booking_card.scss
+++ b/src/css/_booking_card.scss
@@ -1,14 +1,37 @@
+.booked-room__container {
+  display: inline-block;
+  height: 100vh;
+  overflow: scroll;
+  width:60%;
+}
+
+.booked-room__img__container {
+  background-image: $primary-gradient;
+  display: inline-block;
+  height: 100vh;
+  width:39%;
+  overflow: hidden;
+  border-radius: .6rem;
+}
+
+.booked-room__img{
+  height:100vh;
+}
+
+.booked-room__header {
+  margin:3rem 0 3rem 18%;
+}
 .booked-room__card {
   display: grid;
   // justify-items: center;
   grid-template-columns: 30rem repeat(2, 1fr);
   grid-template-rows: repeat(5, 1fr);
   height: fit-content;
-  width: 50%;
+  // width: 60%;
   position: relative;
   padding: 2.2rem;
-  // border-bottom: 2px solid $subtle-tones;
-  border: $test-border;
+  border-bottom: 2px solid $subtle-tones;
+  // border: $test-border;
 
   &__img {
     grid-row: 1/6;
