--- a/src/css/_reset.scss
+++ b/src/css/_reset.scss
@@ -8,6 +8,9 @@
 
 html {
   font-size: 62.5%;
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 body {
@@ -15,9 +18,14 @@ body {
   padding: 5rem;
   height: fit-content;
   min-height: 100vh;
+  
 }
 
 .btn {
   border: 0;
   outline: 0;
 }
+
+::-webkit-scrollbar {
+    display: none;
+  }
