--- a/src/css/_typography.scss
+++ b/src/css/_typography.scss
@@ -3,7 +3,7 @@ body {
   font-weight: 400;
   line-height: 1.7;
   color:$text-primary;
-  font-size: 1.6rem;
+  // font-size: 1.6rem;
 }
 
 .header__title {
@@ -25,6 +25,25 @@ body {
   }
 }
 
+// Search Bar 
+
+.search-bar__input {
+  line-height: 1.8;
+  font-size: 1.1rem;
+
+  &__header--sub{
+    // display: block;
+    font-weight: 200;
+    color: $subtle-tones;
+  }
+}
+
+.date {
+    font-size: 1.8rem;
+}
+
+// Customer DashBoard
+
 .hotel-points {
   
   &__header {
@@ -36,11 +55,19 @@ body {
   }
 
   &__tag-line {
+    font-family: 'Shrikhand', cursive;
     font-weight: 400;
     font-size: 2.5rem;
+    letter-spacing: .2rem;
   }
 }
 
 .booked-room__card {
   font-size: 2rem;
+}
+
+.booked-room__header {
+  font-family: 'Shrikhand', cursive;
+  font-size: 3rem;
+  letter-spacing: .5rem;
 }
