--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -5,5 +5,6 @@
 @import 'animations';
 @import 'search_bar';
 @import 'booking_card';
+@import 'login_page';
+@import 'available_rooms';
 @import 'main_page';
-@import 'login_page'
