--- a/src/css/_available_rooms.scss
+++ b/src/css/_available_rooms.scss
@@ -2,8 +2,14 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, 32rem);
   grid-gap: 1rem;
+  // grid-template-rows: 20rem;
   justify-content: center;
 
+  &__header {
+   width: 100%;
+   grid-column: 1/-1;
+   text-align: center;
+  }
 
   &__card {
     border: $test-border;
