Add pictures, fix search bar display

--- a/src/css/_available_rooms.scss
+++ b/src/css/_available_rooms.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, 32rem);
   grid-gap: 1rem;
+  padding-top: 10rem;
   // grid-template-rows: 20rem;
   justify-content: center;
 
