--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -3,5 +3,5 @@ $text-secondary: rgb(255, 255, 255);
 $subtle-tones: rgb(112, 112, 112);
 $test-border: 2px solid red;
 
-
+$main-drop-shadow: 0 1rem 2rem rgba(black, .2);
 $primary-gradient:linear-gradient(0deg, rgba(0, 0, 0, 0.568), rgba(168, 168, 168, 0.267))
