Add styles to login page

--- a/src/css/_reset.scss
+++ b/src/css/_reset.scss
@@ -26,8 +26,24 @@ body {
   outline: 0;
 
   &:disabled {
-    background-color: pink
+    display: none;
   }
+
+  &:hover {
+    transform: translateY(-.3rem);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
+
+    &:after {
+      transform: scaleX(1.4) scaleY(1.6);
+      opacity:0;
+    }
+  }
+
+  &:active {
+    transform: translateY(-.1rem);
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
+  }
+
 }
 
 ::-webkit-scrollbar {
