--- a/src/css/_search_bar.scss
+++ b/src/css/_search_bar.scss
@@ -51,7 +51,7 @@
     height:4.5rem;
     width: 4.5rem;
     border-radius: 100%;
-    background-color: #FF395B;
+    background-color: $accent;
     background-image: url('../images/search_icon.svg');
     background-position: center;
     background-repeat: no-repeat;
