--- a/src/css/_typography.scss
+++ b/src/css/_typography.scss
@@ -78,3 +78,11 @@ body {
   font-size: 3rem;
   letter-spacing: .5rem;
 }
+
+// Login page
+
+.login-page__header {
+  font-family: 'Shrikhand', cursive;
+  font-size: 3rem;
+  letter-spacing: .5rem;
+}
