--- a/src/css/_typography.scss
+++ b/src/css/_typography.scss
@@ -62,7 +62,6 @@ body {
   }
 }
 
-
 .booked-room__card {
   font-size: 2rem;
 }
@@ -90,4 +89,10 @@ body {
 .login-page__form__btn {
   font-size: 1.6rem;
   font-weight: 700;
+}
+
+//error message
+
+.error__message {
+  font-size: 2.5rem;
 }
