--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -6,5 +6,6 @@
 @import 'search_bar';
 @import 'booking_card';
 @import 'login_page';
+@import 'error-message';
 @import 'available_rooms';
 @import 'main_page';
