--- a/src/css/_available_rooms.scss
+++ b/src/css/_available_rooms.scss
@@ -4,21 +4,8 @@
   grid-gap: 1rem;
   padding-top: 10rem;
   width:100%;
-  // grid-template-rows: 20rem;
   justify-content: center;
 
-  .available-rooms__card__img-container {
-    height: 18rem;
-    width: 100%;
-    overflow: hidden;
-    &__img {
-      height: 100%;
-      border-radius: 1rem;
-    }
-  }
-
-
-  
   &__header {
    width: 100%;
    grid-column: 1/-1;
@@ -36,19 +23,14 @@
     border-radius: .6rem;
 
     &__img {
-      width: 100%;
-      border-radius: 1rem;
-    }
+      height: 20rem;
+    } 
+
     &__book-btn {
       @include rectangleBtn;
       align-self: center;
       width: 90%;
       margin-bottom: 1rem;
-      // position: absolute;
-      // bottom: 0;
-      // display: block;
-      // margin: 0 auto;
-
     }
 
   }
@@ -57,12 +39,19 @@
   margin-right: 2rem;
 }
 
-.available-rooms__card__img-container {
-    height: 18rem;
-    width: 100%;
-    overflow: hidden;
-    &__image {
-      height: 100%;
-      border-radius: 1rem;
-    }
-  }
+.hotel-img-container {
+  width: 100%;
+  height: 18rem;
+  overflow: hidden;
+  border-radius: 1rem;
+}
+// .available-rooms__card__img-container {
+//     height: 18rem;
+//     width: 100%;
+//     overflow: hidden;
+//     &__image {
+//       height: 100%;
+//       border-radius: 1rem;
+//     }
+//   }
+
