Fix date display, capitalize words on cards

--- a/src/css/_search_bar.scss
+++ b/src/css/_search_bar.scss
@@ -8,6 +8,7 @@
   height: 7rem;
   // min-height: fit-content;
   width:80%;
+  min-width: 75rem;
   background-color: $text-secondary;
   border-radius: 5rem;
   z-index:10;
