--- a/src/css/_booking_card.scss
+++ b/src/css/_booking_card.scss
@@ -9,13 +9,14 @@
   background-image: $primary-gradient;
   display: inline-block;
   height: 100vh;
-  width:39%;
+  width:38%;
   overflow: hidden;
   border-radius: .6rem;
 }
 
 .booked-room__img{
-  width: 100%;
+  height: 100%;
+  min-height: 70rem;
 }
 
 .booked-room__header {
@@ -64,7 +65,6 @@
     @include rectangleBtn;
     grid-column: 3;
     grid-row: 5;
-    
     justify-self: right;
   }
 
@@ -73,6 +73,4 @@
     align-self: end;
     margin-left: 1.5rem;
   }
-
-
 }
