Add faccessibility by tabbing

--- a/src/css/_available_rooms.scss
+++ b/src/css/_available_rooms.scss
@@ -4,7 +4,7 @@
   grid-gap: 1rem;
   padding-top: 10rem;
   width:100%;
-  justify-content: center;
+  justify-items: center;
 
   &__header {
    width: 100%;
