--- a/src/css/_animations.scss
+++ b/src/css/_animations.scss
@@ -29,3 +29,26 @@
     transform: translate(0);
   }
 }
+
+@keyframes dropDown {
+    0% {
+        transform: scaleY(0)
+    }
+    80% {
+        transform: scaleY(1.1)
+    }
+    100% {
+        transform: scaleY(1)
+    }
+}
+@keyframes expandOut {
+    0% {
+        transform: scaleX(0)
+    }
+    80% {
+        transform: scaleX(1.1)
+    }
+    100% {
+        transform: scaleX(1)
+    }
+}
