--- a/src/css/_mixins.scss
+++ b/src/css/_mixins.scss
@@ -12,9 +12,18 @@
   transform: translate(-50%, -50%);
 }
 
+@mixin hoverColor ($baseColor) {
+    background-color: $baseColor;
+    &:hover,
+    &:focus {
+      background-color: darken($baseColor, 15%)
+    }
+}
+
 @mixin roundButton ($img) {
+  @include hoverColor($accent);
   border-radius: 100%;
-    background-color: $accent;
+    // background-color: $accent;
     background-image: url($img);
     background-position: center;
     background-repeat: no-repeat;
@@ -30,7 +39,8 @@
 
 @mixin rectangleBtn {
   color: #fff;
-  background-color: $accent;
+  @include hoverColor($accent);
+  // background-color: $accent;
   border-radius: .6rem;
   width: 15rem;
   height: 4rem;
