--- a/src/css/_reset.scss
+++ b/src/css/_reset.scss
@@ -32,7 +32,7 @@ body {
   &:hover {
     transform: translateY(-.3rem);
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
-    filter: brightness(85%);
+    // filter: brightness(85%);
 
     &:after {
       transform: scaleX(1.4) scaleY(1.6);
@@ -40,13 +40,14 @@ body {
     }
   }
 
-  &:active {
+  &:active,
+  &:focus {
     transform: translateY(-.1rem);
     box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
   }
   &:focus {
-    box-shadow: 0 0 0 2pt red;
-    filter: brightness(85%)
+    // box-shadow: 0 0 0 2px rgb(0, 0, 0);
+    // filter: brightness(85%)
   }
 
 }
