--- a/src/css/_login_page.scss
+++ b/src/css/_login_page.scss
@@ -32,7 +32,7 @@
 }
 
 .login-page__form__btn {
-  @include hoverColor(#4CAEA6)
+  @include hoverColor(#4CAEA6);
   // background-color: #4CAEA6;
   color: white;
 }
