--- a/src/css/_media-queries.scss
+++ b/src/css/_media-queries.scss
@@ -92,7 +92,7 @@
 
   .booked-room__card__btn {
     font-size: 1.2rem;
-    width: 10rem
+    width: 8rem
   }
 
   .search-bar {
@@ -135,4 +135,26 @@
     width: 60rem;
     padding:0;
   }
+
+  .available-rooms {
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: unset;
+
+    &__card {
+      width: 19rem;
+      padding: 3px;
+      height:30rem;
+      font-size: 1.1rem;
+    }
+
+    &__img {
+      height: 15rem
+    }
+  }
+  .hotel-img-container {
+    height: 13rem;
+  }
+
+ 
+
 }
