--- a/src/css/_media-queries.scss
+++ b/src/css/_media-queries.scss
@@ -47,6 +47,10 @@
     width: 60%
   }
 
+  .header {
+    clip-path: unset;
+  }
+
   .header__title--main {
     font-size: 6vw;
     letter-spacing: 2rem;
