Add booking confirmation message

--- a/src/css/_typography.scss
+++ b/src/css/_typography.scss
@@ -89,8 +89,8 @@ body {
 
 //error message
 
-.error__message {
-  font-size: 2.5rem;
+.user-msg__header {
+  font-size: 1.8rem;
 }
 
 //available rooms 
