Rename scss partial file

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -6,7 +6,7 @@
 @import 'search_bar';
 @import 'booking_card';
 @import 'login_page';
-@import 'error-message';
+@import 'user-message';
 @import 'available_rooms';
 @import 'main_page';
 @import 'media-queries';
