--- a/src/css/_reset.scss
+++ b/src/css/_reset.scss
@@ -32,6 +32,7 @@ body {
   &:hover {
     transform: translateY(-.3rem);
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
+    cursor: pointer;
 
     &:after {
       transform: scaleX(1.4) scaleY(1.6);
