--- a/src/css/_login_page.scss
+++ b/src/css/_login_page.scss
@@ -1,13 +1,13 @@
 .login-page__img {
   display: inline-block;
-  height:85vh;
+  height: 85vh;
   width: 36%;
   max-width: 48rem;
   overflow: hidden;
   border: 1px solid $subtle-tones;
 
   &__hero-img {
-    height:100%;
+    height: 100%;
     min-height: 75rem;
   }
 }
@@ -21,16 +21,20 @@
   height: 85vh;
 }
 
+.login-page__form-container p {
+  font-weight: bold;
+}
+
 .login-form__input {
   display: block;
   height: 4.5rem;
   width: 25rem;
   margin-top: 2rem;
-  border-radius: .6rem;
+  border-radius: 0.6rem;
 }
 
 .login-page__form__btn {
-  @include hoverColor(#4CAEA6);
+  @include hoverColor(#4caea6);
   color: rgb(41, 41, 41);
 }
 
